--- a/globe-trotter/package.json
+++ b/globe-trotter/package.json
@@ -23,6 +23,7 @@
     "prisma": "^5.10.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -33,5 +34,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "tw-animate-css": "^1.4.0"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
